Update clinic website: Sanjivani Clinic branding, contact number +91 63537 50262, clinic visit price ₹800, remove certificate section, fix mobile responsiveness, remove floating call button

--- a/index.html
+++ b/index.html
@@ -3,13 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dr. HomeoWellness - Expert Homeopathy Treatment Online & Offline</title>
-    <meta name="description" content="Expert homeopathy treatment with Dr. Rajesh Wellness. 15+ years experience in online consultation, chronic disease care, and natural healing. Book appointment now!" />
-    <meta name="author" content="Dr. HomeoWellness" />
-    <meta name="keywords" content="homeopathy doctor, online consultation, natural healing, chronic disease treatment, Gujarat homeopath" />
+    <title>Dr. Jay Bhatt - Expert Homeopathy Treatment Online & Offline | "Healing with Homeopathy, Naturally."</title>
+    <meta name="description" content="Expert homeopathy treatment with Dr. Jay Bhatt. 3+ years experience, BHMS from V.H. Dave Homeopathy College, currently pursuing MD (Medicine) at NIH, Delhi. AIR 35 in MD PG exam. Book appointment now!" />
+    <meta name="author" content="Dr. Jay Bhatt" />
+    <meta name="keywords" content="Dr. Jay Bhatt, homeopathy doctor, online consultation, natural healing, chronic disease treatment, Gujarat homeopath, BHMS, MD Medicine, NIH Delhi" />
 
-    <meta property="og:title" content="Dr. HomeoWellness - Expert Homeopathy Treatment" />
-    <meta property="og:description" content="Professional homeopathy treatment with 15+ years experience. Safe, natural healing for all ages." />
+    <!-- Performance Optimizations -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://api.emailjs.com" />
+    <link rel="preconnect" href="https://buy.stripe.com" />
+    <link rel="preconnect" href="https://rzp.io" />
+    <link rel="preconnect" href="https://www.paypal.com" />
+    <link rel="dns-prefetch" href="https://api.emailjs.com" />
+    <link rel="dns-prefetch" href="https://buy.stripe.com" />
+    <link rel="dns-prefetch" href="https://rzp.io" />
+    <link rel="dns-prefetch" href="https://www.paypal.com" />
+    
+    <!-- Resource Hints -->
+    <link rel="preload" href="/src/assets/doctor-profile.jpg" as="image" type="image/jpeg" />
+    
+    <!-- Critical CSS -->
+    <style>
+      /* Critical rendering path CSS */
+      body { margin: 0; font-family: system-ui, -apple-system, sans-serif; }
+      #root { min-height: 100vh; }
+      .loading { display: flex; align-items: center; justify-content: center; height: 100vh; }
+    </style>
+
+    <meta property="og:title" content="Dr. Jay Bhatt - Expert Homeopathy Treatment | Healing with Homeopathy, Naturally." />
+    <meta property="og:description" content="Professional homeopathy treatment with Dr. Jay Bhatt. 3+ years experience, BHMS from V.H. Dave Homeopathy College, currently pursuing MD (Medicine) at NIH, Delhi." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
